--- a/src/mailto.html
+++ b/src/mailto.html
@@ -11,7 +11,7 @@
       <nav>
         <ul>
           <li><a href="#" title="#">Home</a></li>
-          <li><a href="javascript:(function(){return console.log(location='mailto:s.s@s.su?subject=«Новый: Обратная связь»&body='+encodeURIComponent('\r\n\r\n\r\n________________________________________________________________________________________________\r\nURL \t[\t\t'+location.href.toString()+'\t\t]\r\n'))}())" title="mailto: s.s@s.su">mailto</a></li>
+          <li><a href="javascript:(function(){return console.log(location='mailto:s.s@s.su?subject=«Новый: Обратная связь»&body='+encodeURIComponent('\r\n\r\n\r\n________________________________________________________________________________________________\r\nURL \t[\t\t'+location.href.toString()+'\t\t]\r\n'))}())" title="mailto: s.s@s.su">✉️ mailto</a></li>
         </ul>
       </nav>
     </main>
